# OpenGLLab

./: .gitignore  CMakeLists.txt  README.md
Models/: classroom2.skp  look3.skp
Models/85-cottage_obj/: cottage_obj.mtl
Models/bedroom/: bedroom.mtl
Models/classroom/: classroom2.mtl
Models/gym/: gym.mtl
Models/kitchen/: kitchen.mtl
Models/look3/: look3.mtl
OpenGLLab/: main.cpp
OpenGLLab.xcodeproj/: project.pbxproj
OpenGLLab.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenGLLab.xcodeproj/project.xcworkspace/xcuserdata/luost.xcuserdatad/xcdebugger/: Expressions.xcexplist
OpenGLLab.xcodeproj/xcshareddata/xcschemes/: OpenGLTest.xcscheme
OpenGLLab.xcodeproj/xcuserdata/luost.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OpenGLLab/Playground/: advanced_glsl.hpp  advanced_lighting.hpp  base.hpp  basic_lighting.hpp  framebuffer.hpp  geometry_shader.hpp  main.cpp  model.hpp  playground.hpp  shadow.hpp  shadow2.hpp  skybox.hpp
OpenGLLab/Playground/Objects/: Box.hpp  Floor.hpp  Grass.hpp  PointLight.hpp  ScreenQuad.hpp  Skybox.hpp
OpenGLLab/Showcase/: main.cpp
OpenGLLab/Showcase/App/: App.hpp  GymApp.hpp  gymapp.hpp
OpenGLLab/Showcase/GI/: SSAO.hpp
OpenGLLab/Showcase/Light/: SpotLight.hpp
OpenGLLab/Showcase/Scene/: Gym.hpp  Scene.hpp
OpenGLLab/Showcase/Shadow/: MSMShadowMapper.hpp  ShadowMap.hpp  ShadowMapper.hpp
OpenGLLab/Showcase/Utility/: GBuffer.hpp  GaussianBlurFilter.hpp  IlluminationBuffer.hpp  ScreenQuad.hpp  helper.hpp
OpenGLTest/: main.cpp
OpenGLTest.xcodeproj/: project.pbxproj
OpenGLTest.xcodeproj/xcshareddata/xcschemes/: OpenGLTest.xcscheme
OpenGLTest.xcodeproj/xcuserdata/luost.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OpenGLTest.xcodeproj/xcuserdata/luost.xcuserdatad/xcschemes/: xcschememanagement.plist
OpenGLTest/Playground/: base.hpp  basic.hpp  basic_lighting.hpp  blending.hpp  depth_stencil_test.hpp  framebuffer.hpp  model.hpp  playground.hpp
OpenGLTest/Playground/Objects/: Box.hpp  Floor.hpp
Shaders/: simple.frag  simple.vert
Shaders/Showcase/: debug_quad.frag
Shaders/Showcase/gi/: ssao.frag
Shaders/Showcase/object/: common.vert  common_msm.frag  common_msm_illum.frag
Shaders/Showcase/shadow/: msm.frag
Shaders/Showcase/utility/: g_buffer.frag  g_buffer.vert  g_buffer_ssao.vert  gaussian_blur.frag  illum_buffer.frag  illum_buffer_ms.frag
Shaders/advanced/: box.vert  red.frag  yellow.frag
Shaders/advanced_lighting/: floor.frag  floor.vert
Shaders/basic/: simple.frag
Shaders/basic_lighting/: basic.vert  lamp.frag  object.frag
Shaders/box/: box.frag  box.vert  depth_test.frag  single_color.frag
Shaders/etc/: grass.frag
Shaders/floor/: floor.frag  floor.vert
Shaders/framebuffer/: fb.frag  fb.vert
Shaders/gshader/: gshader.frag  gshader.geom  gshader.vert  model.frag  model.vert  normal.frag  normal.geom  normal.vert
Shaders/model/: model.frag  model.vert
Shaders/shadow/: box.frag  box.vert  debug_quad.frag  floor.frag  floor.vert  shadow_mapping_depth.vert
Shaders/shadow2/: debug_quad.frag  gaussian_blur.frag  gaussian_blur.vert  moment_shadow_mapping.vert  msm.vert  object.frag  object.vert  object_msm.frag
WrappedGLFW/: ArrayBuffer.hpp  Buffer.hpp  Exception.hpp  FrameBuffer.hpp  GL.hpp  GLFW.hpp  Program.hpp  RenderBuffer.hpp  Shader.hpp  Texture.hpp  UniformBuffer.hpp  VertexArray.hpp  Window.hpp  loader.hpp  support.hpp  wglfw.hpp
WrappedGLFW/Utilities/: AssimpModel.hpp  Camera.hpp  Material.hpp  Mesh.hpp  MeshTextureNameGenerator.hpp  Triangle.hpp  UniformBufferRangeManager.hpp  helper.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: wglfw
